updating header details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I have retired from one career and now I am starting another</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I have traveled all over the world picking up a piece of me wherever I was</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Riding my Harley, Camping, Shooting Guns, Scuba Diving, and relaxing with a good cigar and a Single Barrel Jack Daniels and Coke</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I already lived my childhood dream job</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Spanish Fork, Utah</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Make my own web pages and create some software for my new business</p>
     </section>
 
     <footer id="footer">
