updating dream job

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>What are your favorite hobbies?</h1>
       <p>Riding my Harley, Camping, Shooting Guns, Scuba Diving, and relaxing with a good cigar and a Single Barrel Jack Daniels and Coke</p>
       <h1>What's your dream job?</h1>
-      <p>I already lived my childhood dream job</p>
+      <p>I already lived my childhood dream job (Army Special Forces)</p>
       <h1>Where do you live?</h1>
       <p>Spanish Fork, Utah</p>
       <h1>Why do you want to be a web developer?</h1>
