Updating header details again

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I have retired from one career and now I am starting another</p>
+      <p>I spent 20+ years in the Army jumping out of airplanes, scuba divng, shooting guns, blowing things up, and running with scissors.</p>
       <h1>Where I'm From</h1>
-      <p>I have traveled all over the world picking up a piece of me wherever I was</p>
+      <p>I have traveled all over the world my whole life.  I pick up a piece of me wherever I was at.  Each piece adds to where I am from.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Riding my Harley, Camping, Shooting Guns, Scuba Diving, and relaxing with a good cigar and a Single Barrel Jack Daniels and Coke</p>
+      <p>Riding my Harley, Camping with my wife, Teaching and Shooting Guns with others, Scuba Diving, and relaxing with a good cigar and a Single Barrel Jack Daniels and Coke.</p>
       <h1>What's your dream job?</h1>
-      <p>I already lived my childhood dream job (Army Special Forces)</p>
+      <p>I already lived my childhood dream job (Army Special Forces).  Now I am starting me second career.</p>
       <h1>Where do you live?</h1>
-      <p>Spanish Fork, Utah</p>
+      <p>Spanish Fork, Utah.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Make my own web pages and create some software for my new business</p>
+      <p>Make my own web pages and create some software for my new business (Tactical Training).  But I will need to make money until my second business is up and running.  So web development is a great choice for me.</p>
     </section>
 
     <footer id="footer">
