--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       <h1>Introduction</h1>
       <p>I spent 20+ years in the Army jumping out of airplanes, scuba divng, shooting guns, blowing things up, and running with scissors.</p>
       <h1>Where I'm From</h1>
-      <p>I have traveled all over the world my whole life.  I pick up a piece of me wherever I was at.  Each piece adds to where I am from.</p>
+      <p>I have traveled all over the world my whole life.  I pick up a piece of me wherever I was at.  Each piece adds to where I am from.  My heart is from Utah, my peacefulness is from the Smokey Mountains of North Carolina, my mysticism is from the Land of the Morning Calm, my desolation is from the sand duned deserts of Saudi Arabia, my demons are from Afghanistan and Pakistan, and my love of hops and barley is from Germany.</p>
       <h1>What are your favorite hobbies?</h1>
       <p>Riding my Harley, Camping with my wife, Teaching and Shooting Guns with others, Scuba Diving, and relaxing with a good cigar and a Single Barrel Jack Daniels and Coke.</p>
       <h1>What's your dream job?</h1>
-      <p>I already lived my childhood dream job (Army Special Forces).  Now I am starting me second career.</p>
+      <p>I already lived my childhood dream job (Army Special Forces).  Now I am starting my second career.</p>
       <h1>Where do you live?</h1>
       <p>Spanish Fork, Utah.</p>
       <h1>Why do you want to be a web developer?</h1>
