didn't like wording of header details so this is the change

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I spent 20+ years in the Army jumping out of airplanes, scuba divng, shooting guns, blowing things up, and running with scissors.</p>
+      <p>I spent 20+ years in the Army jumping out of airplanes, scuba divng, shooting guns, blowing things up, and running with scissors.  Now I am turning a page and starting a new chapter.  Oh yeah....this is going to be epic!</p>
       <h1>Where I'm From</h1>
       <p>I have traveled all over the world my whole life.  I pick up a piece of me wherever I was at.  Each piece adds to where I am from.  My heart is from Utah, my peacefulness is from the Smokey Mountains of North Carolina, my mysticism is from the Land of the Morning Calm, my desolation is from the sand duned deserts of Saudi Arabia, my demons are from Afghanistan and Pakistan, and my love of hops and barley is from Germany.</p>
       <h1>What are your favorite hobbies?</h1>
       <p>Riding my Harley, Camping with my wife, Teaching and Shooting Guns with others, Scuba Diving, and relaxing with a good cigar and a Single Barrel Jack Daniels and Coke.</p>
       <h1>What's your dream job?</h1>
-      <p>I already lived my childhood dream job (Army Special Forces).  Now I am starting my second career.</p>
+      <p>I already lived my childhood dream job (Army Special Forces).  Now my dream job is doing anything that will pay for gas, pay for camping food, allow me to make more ammo and upgrade my guns, travel to bodies of water to blow bubbles, and relax in solitude when I am not doing.</p>
       <h1>Where do you live?</h1>
-      <p>Spanish Fork, Utah.</p>
+      <p>Next to the Wasatch Mountains and the Uinta National Park in a town called Spanish Fork, Utah.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Make my own web pages and create some software for my new business (Tactical Training).  But I will need to make money until my second business is up and running.  So web development is a great choice for me.</p>
+      <p>Make my own web pages and create some software for my new entrepreneur endeavor (Personal Defense and Tactical Training).  But I will need to make a little money to keep the lights on and food on the table until my business is up and running.  So web development is a great choice for me.</p>
     </section>
 
     <footer id="footer">
