punctuation changes in header details

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>What are your favorite hobbies?</h1>
       <p>Riding my Harley, Camping with my wife, Teaching and Shooting Guns with others, Scuba Diving, and relaxing with a good cigar and a Single Barrel Jack Daniels and Coke.</p>
       <h1>What's your dream job?</h1>
-      <p>I already lived my childhood dream job (Army Special Forces).  Now my dream job is doing anything that will pay for gas, pay for camping food, allow me to make more ammo and upgrade my guns, travel to bodies of water to blow bubbles, and relax in solitude when I am not doing.</p>
+      <p>I already lived my childhood dream job (Army Special Forces).  Now my dream job is doing anything that will pay for gas, pay for camping food, allow me to make more ammo and upgrade my guns, travel to bodies of water to blow bubbles, and relax in solitude when I am not doing anything else.</p>
       <h1>Where do you live?</h1>
       <p>Next to the Wasatch Mountains and the Uinta National Park in a town called Spanish Fork, Utah.</p>
       <h1>Why do you want to be a web developer?</h1>
