changing a name in header details

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1>What's your dream job?</h1>
       <p>I already lived my childhood dream job (Army Special Forces).  Now my dream job is doing anything that will pay for gas, pay for camping food, allow me to make more ammo and upgrade my guns, travel to bodies of water to blow bubbles, and relax in solitude when I am not doing anything else.</p>
       <h1>Where do you live?</h1>
-      <p>Next to the Wasatch Mountains and the Uinta National Park in a town called Spanish Fork, Utah.</p>
+      <p>Next to the Wasatch Mountains and the Uinta National Forest in a town called Spanish Fork, Utah.</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>Make my own web pages and create some software for my new entrepreneur endeavor (Personal Defense and Tactical Training).  But I will need to make a little money to keep the lights on and food on the table until my business is up and running.  So web development is a great choice for me.</p>
     </section>
